--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 />
 
 
-    <title>MDV Check-ins</title>
+    <title>MDV Admin Portal</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
